# zeroclaw

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .pr_agent.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  Justfile  LICENSE-MIT  NOTICE  PRD.md  README.md  book.toml  build.rs  clippy.toml  docker-compose.yml  install.sh  setup.bat
.cargo/: audit.toml
.claude/: settings.json
.gemini/: style-guide.md
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
benches/: agent_benchmarks.rs
crates/hrafn-kernel/: Cargo.toml
crates/hrafn-kernel/src/: lib.rs  main.rs
crates/hrafn-kernel/tests/: registry.rs
crates/hrafn-sdk/: Cargo.toml
crates/hrafn-sdk/src/: lib.rs  prelude.rs  protocol.rs  tool.rs
dev/: README.md  ci.sh  cli.sh  config.harness-test.toml  config.template.toml  docker-compose.ci.yml  docker-compose.yml  measure-microkernel.sh  recompute_contributor_tiers.sh  test-harness.sh  test-termux-release.sh
docs/: README.md  SUMMARY.md  aardvark-integration.md  browser-setup.md
docs-pages/: CNAME  _config.yml  index.md
fuzz/: Cargo.toml
marketplace/: README.md  sync-marketplace-templates.yml
scripts/: 99-act-led.rules  README.md  deploy-rpi.sh  detect-resubmits.sh  hrafn.service  rpi-config.toml
src/: i18n.rs  identity.rs  lib.rs  main.rs  migration.rs  util.rs
templates/: alert_response.md  trading_signal.md
tests/: session_roundtrip.rs
tool_descriptions/: ar.toml  bn.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  (+24 more)
(+397 files in other folders)
